[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/ui/icons/Construction-Menu.png" type="Texture" id=1]
[ext_resource path="res://assets/audio/sounds/UI_Menu_Close_01.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/sounds/UI_Menu_Mouse_Over_01.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/sounds/UI_Menu_Open_01.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/sounds/UI_Menu_Select_01.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/ui/construction_tool_bar.gd" type="Script" id=11]
[ext_resource path="res://scenes/ui/construction_button_group.tscn" type="PackedScene" id=23]

[sub_resource type="Animation" id=1]
resource_name = "expand"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("RecreationBtn:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -82 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OfficeBtn:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -68, 0 ) ]
}

[node name="ConstructionToolBar" type="Control"]
margin_right = 50.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UUCBtn" parent="." instance=ExtResource( 23 )]

[node name="PowerBtn" parent="." instance=ExtResource( 23 )]
structure_type = 1

[node name="AgBtn" parent="." instance=ExtResource( 23 )]
structure_type = 2

[node name="ResidentialBtn" parent="." instance=ExtResource( 23 )]
structure_type = 3

[node name="OfficeBtn" parent="." instance=ExtResource( 23 )]
structure_type = 4

[node name="EducationBtn" parent="." instance=ExtResource( 23 )]
structure_type = 5

[node name="MedicalBtn" parent="." instance=ExtResource( 23 )]
structure_type = 6

[node name="ReclamationBtn" parent="." instance=ExtResource( 23 )]
structure_type = 7

[node name="FactoryBtn" parent="." instance=ExtResource( 23 )]
structure_type = 7

[node name="RecreationBtn" parent="." instance=ExtResource( 23 )]
structure_type = 9

[node name="ConstructionBtn" type="TextureButton" parent="."]
margin_left = 2.0
margin_right = 52.0
margin_bottom = 50.0
hint_tooltip = "Construction Menu"
mouse_filter = 1
toggle_mode = true
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/expand = SubResource( 1 )

[node name="MenuOpenStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0
bus = "UI"

[node name="MenuCloseStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -3.0
bus = "UI"

[node name="MenuMouseOverStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -9.0
bus = "UI"

[node name="MenuSelectStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -3.0
bus = "UI"
[connection signal="mouse_entered" from="." to="." method="_on_ConstructionToolBar_mouse_entered"]
[connection signal="focus_exited" from="ConstructionBtn" to="." method="_on_ConstructionBtn_focus_exited"]
[connection signal="toggled" from="ConstructionBtn" to="." method="_on_ConstructionBtn_toggled"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
